# pyskl

./: README.md  main.py  pyproject.toml  requirements.txt
configs/stgcn++/stgcn++_dtc_v2_yolo11/: j.py
